# kata-poker

./: Dojo-Poker.html  LICENSE  README.md  doc-index.html  index-frames.html  index.html  mini_Dojo-Poker.html  poker.cabal  poker.haddock
src/Dojo/: Poker.hs
tests/: TestSuite.hs
tests/Dojo/Poker/: Tests.hs
