Name:               poker
Version:            0.1
Stability:          alpha

Author:             Oliver Mader
Maintainer:         b52@reaktor42.de
Copyright:          (c) 2012, Oliver Mader
License:            MIT

Build-Type:         Simple
Cabal-Version:      >= 1.6
Tested-With:        GHC == 7.0.4

Library
  Exposed-Modules:  Dojo.Poker
  HS-Source-Dirs:   src
  GHC-Options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  Build-Depends:
    base >= 4 && < 5

Test-suite tests
  Main-Is:          TestSuite.hs
  Type:             exitcode-stdio-1.0
  HS-Source-Dirs:   src tests
  GHC-Options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  Build-Depends:
    HUnit >= 1.2 && < 1.3,
    QuickCheck >= 2.4 && < 2.5,
    test-framework >= 0.4 && < 0.7,
    test-framework-hunit >= 0.2 && < 0.3,
    test-framework-quickcheck2 >= 0.2 && < 0.3,
    test-framework-th >= 0.2 && < 0.3,
    --
    base >= 4 && < 5

  Other-Modules:
    Dojo.Poker.Tests